--- a/src/assets/scss/main/_style.scss
+++ b/src/assets/scss/main/_style.scss
@@ -2147,6 +2147,7 @@ body.light .main-img-mobile {
   height: 30px;
   background-color: var(--main-primary-color);
   cursor: pointer;
+  color: #fff;
   
 }
 
