--- a/src/assets/scss/main/_style.scss
+++ b/src/assets/scss/main/_style.scss
@@ -1,8 +1,8 @@
 /*
-Template Name: Tunis
+Template Name: Lucas
 Author: ib-themes
 Author URI: http://themeforest.net/user/ib-themes
-Description: Tunis - Personal Portfolio Vuejs Template
+Description: Lucas - Personal Portfolio
 Version: 1.0
 */
 
