new blog on planets earth-like

--- a/src/assets/scss/main/_modal.scss
+++ b/src/assets/scss/main/_modal.scss
@@ -80,7 +80,7 @@ body.light .modal-dialog-scrollable .modal-body::-webkit-scrollbar-thumb:hover {
 }
 @media (min-width: 992px) {
   .blog-modal.modal-dialog {
-    max-width: 750px;
+    max-width: 950px; //750px default
   }
 }
 
