--- a/src/assets/scss/main/_style.scss
+++ b/src/assets/scss/main/_style.scss
@@ -464,6 +464,10 @@ body.light .header ul.icon-menu li.icon-box:hover i {
   margin: 0;
 }
 
+.title_gras {
+  font-weight: bold;
+}
+
 .title-bg {
   font-size: 110px;
   left: 0;
